cmake_minimum_required(VERSION 3.16)
project(LeetcodeByCpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(Main main.cpp)
add_executable(Simple Simple.cpp)
add_executable(Matrix Matrix.cpp)
add_executable(ClassSchedule ClassSchedule.cpp)
add_executable(PatternMatch PatternMatch.cpp)
add_executable(Tree Tree.cpp)
add_executable(DoublePointer DoublePointer.cpp)
add_executable(List List.cpp)
add_executable(BFS BFS.cpp)
add_executable(Greedy Greedy.cpp)
add_executable(Sort Sort.cpp)
add_executable(DP DP.cpp)
add_executable(Array Array.cpp)
add_executable(QueueDesign QueueDesign.cpp)
add_executable(String String.cpp)
add_executable(DFS DFS.cpp)